--- a/atelier/public/index.html
+++ b/atelier/public/index.html
@@ -26,6 +26,7 @@
     -->
     <title>React App</title>
     <link rel="stylesheet" href="%PUBLIC_URL%/styles/styles.css">
+    <script src="https://kit.fontawesome.com/77770dfbff.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
